--- a/css/style.css
+++ b/css/style.css
@@ -161,9 +161,15 @@ h1, h2, h3 {
     background-color: rgba(0,0,0,0.25);
 } */
 
-.contacto1, .contacto2 {
+.contacto1 {
     text-align: center;
     margin: 0% 0% 5% 0%;
+    padding: 0;
+}
+
+.contacto2 {
+    text-align: center;
+    margin: 0% 0% 2% 0%;
     padding: 0;
 }
 
@@ -267,48 +273,48 @@ h1, h2, h3 {
 
 .contenedor {
     max-width: 120rem;
-    margin: 2rem auto 6rem auto;
+    margin: 2rem auto 1rem auto;
 }
 
 @media only screen and (max-width: 1400px) {
     .contenedor {
         max-width: 100rem;
-        margin: 2rem auto 5rem auto;
+        margin: 2rem auto 1rem auto;
     }    
 }
 
 @media only screen and (max-width: 1140px) {
     .contenedor {
         max-width: 80rem;
-        margin: 2rem auto 5rem auto;
+        margin: 2rem auto 1rem auto;
     }    
 }
 
 @media only screen and (max-width: 900px) {
     .contenedor {
         max-width: 60rem;
-        margin: 2rem auto 5rem auto;
+        margin: 2rem auto 1rem auto;
     }    
 }
 
 @media only screen and (max-width: 768px) {
     .contenedor {
         max-width: 50rem;
-        margin: 2rem auto 5rem auto;
+        margin: 2rem auto 1rem auto;
     }    
 }
 
 @media only screen and (max-width: 600px) {
     .contenedor {
         max-width: 40rem;
-        margin: 2rem auto 5rem auto;
+        margin: 2rem auto 1rem auto;
     }    
 }
 
 @media only screen and (max-width: 480px) {
     .contenedor {
         max-width: 30rem;
-        margin: 2rem auto 5rem auto;
+        margin: 2rem auto 1rem auto;
     }    
 }
 
@@ -319,7 +325,7 @@ h1, h2, h3 {
     -moz-box-shadow: 1px -2px 11px -1px rgba(87,86,87,0.57);
     box-shadow: 1px -2px 11px -1px rgba(87,86,87,0.57);
 
-    padding: 2rem;
+    padding: 2rem 2rem 2rem 2rem;
     border-radius: 1rem;
 }
 
@@ -330,6 +336,7 @@ h1, h2, h3 {
     grid-template-columns: repeat(3, 1fr);
     /* display: flex; */
     column-gap: 1rem;
+    margin-bottom: 2.5rem;
 }
 .column1, .column2, .column3 {
     display: grid;
@@ -353,6 +360,7 @@ h1, h2, h3 {
     text-align: center;
     justify-content: center;
     margin: 0 auto;
+    padding: 0rem 1.5rem 0rem 1.5rem;
 }
 
 .main1, .main3 {
@@ -362,6 +370,7 @@ h1, h2, h3 {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 1.5rem;
 }
 
 .main2 {
@@ -371,6 +380,7 @@ h1, h2, h3 {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 1.5rem;
 }
 
 .iconos {
@@ -527,12 +537,29 @@ label {
     width: 90%;    
 }
 
+.my_services {
+    margin-bottom: 1.5rem;
+}
+
+.service1, .service2, .service3 {
+    margin-bottom: 1rem;
+}
+
+.p1, .p2, .p3 {
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.contenedor {
+    padding-bottom: 0.2rem;
+}
+
 footer {
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     width: 100%;
     text-align: center;
-    background-color: var(--secundario);
+    /* background-color: var(--secundario); */
     margin: 0 auto 0 auto;
     font-weight: bolder;
     font-style: italic;
