--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ h1, h2, h3 {
 
 .contacto1 {
     text-align: center;
-    margin: 0% 0% 5% 0%;
+    margin: 0% 0% 0% 0%;
     padding: 0;
 }
 
@@ -271,50 +271,61 @@ h1, h2, h3 {
     }
 }
 
+/****************************************************************************************************/
+/****************************************************************************************************/
+/****************************************************************************************************/
+/****************************************************************************************************/
+
 .contenedor {
     max-width: 120rem;
-    margin: 2rem auto 1rem auto;
+    margin: 2rem auto 0.5rem auto;
 }
 
 @media only screen and (max-width: 1400px) {
     .contenedor {
         max-width: 100rem;
-        margin: 2rem auto 1rem auto;
+        height: auto;
+        margin: 2rem auto 0.5rem auto;
     }    
 }
 
 @media only screen and (max-width: 1140px) {
     .contenedor {
         max-width: 80rem;
-        margin: 2rem auto 1rem auto;
+        height: auto;
+        margin: 2rem auto 0.5rem auto;
     }    
 }
 
 @media only screen and (max-width: 900px) {
     .contenedor {
         max-width: 60rem;
-        margin: 2rem auto 1rem auto;
+        height: auto;
+        margin: 2rem auto 0.5rem auto;
     }    
 }
 
 @media only screen and (max-width: 768px) {
     .contenedor {
         max-width: 50rem;
-        margin: 2rem auto 1rem auto;
+        height: auto;
+        margin: 2rem auto 0.5rem auto;
     }    
 }
 
 @media only screen and (max-width: 600px) {
     .contenedor {
         max-width: 40rem;
-        margin: 2rem auto 1rem auto;
+        height: auto;
+        margin: 2rem auto 0.5rem auto;
     }    
 }
 
 @media only screen and (max-width: 480px) {
     .contenedor {
         max-width: 30rem;
-        margin: 2rem auto 1rem auto;
+        height: auto;
+        margin: 2rem auto 0.5rem auto;
     }    
 }
 
@@ -325,21 +336,87 @@ h1, h2, h3 {
     -moz-box-shadow: 1px -2px 11px -1px rgba(87,86,87,0.57);
     box-shadow: 1px -2px 11px -1px rgba(87,86,87,0.57);
 
-    padding: 2rem 2rem 2rem 2rem;
     border-radius: 1rem;
+    padding: 2rem 2rem 2rem 2rem;
 }
+
+/****************************************************************************************************/
+/****************************************************************************************************/
+/****************************************************************************************************/
+/****************************************************************************************************/
 
 .servicios {
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+    /* margin-bottom: 2.5rem; */
+    /* display: flex; */
     /* grid-template-columns: 350px 350px 350px; */
     /* grid-template-columns: 1fr 2fr 1fr; */
-    grid-template-columns: repeat(3, 1fr);
-    /* display: flex; */
-    column-gap: 1rem;
-    margin-bottom: 2.5rem;
 }
+
+@media only screen and (max-width: 1400px) {
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+        /* margin-bottom: 2.5rem; */
+    } 
+}
+
+@media only screen and (max-width: 1140px) {
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+        /* margin-bottom: 2.5rem; */
+    }    
+}
+
+@media only screen and (max-width: 900px) {
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+        /* margin-bottom: 2.5rem; */
+    }   
+}
+
+@media only screen and (max-width: 768px) {
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+        /* margin-bottom: 2.5rem; */
+    }     
+}
+
+@media only screen and (max-width: 600px) {
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 1rem;
+        /* margin-bottom: 2.5rem; */
+    }     
+}
+
+@media only screen and (max-width: 480px) {
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        column-gap: 1rem;
+        /* margin-bottom: 2.5rem; */
+    }   
+}
+
+/****************************************************************************************************/
+/****************************************************************************************************/
+/****************************************************************************************************/
+/****************************************************************************************************/
+
 .column1, .column2, .column3 {
     display: grid;
+    margin-bottom: 2.5rem;
     /* grid-template-columns: repeat(3, 1fr); */
     /* column-gap: 1rem;     */
 }
@@ -430,54 +507,6 @@ h1, h2, h3 {
     text-align: center;
 } */
 
-/* @media only screen and (max-width: 1400px) {
-    .servicios {
-        display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        column-gap: 1rem;
-    } 
-}
-
-@media only screen and (max-width: 1140px) {
-    .servicios {
-        display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        column-gap: 1rem;
-    }    
-}
-
-@media only screen and (max-width: 900px) {
-    .servicios {
-        display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        column-gap: 1rem;
-    }   
-}
-
-@media only screen and (max-width: 768px) {
-    .servicios {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        column-gap: 1rem;
-    }     
-}
-
-@media only screen and (max-width: 600px) {
-    .servicios {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        column-gap: 1rem;
-    }     
-}
-
-@media only screen and (max-width: 480px) {
-    .servicios {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        column-gap: 1rem;
-    }   
-} */
-
 .formulario {
     background-color: var(--gris);
     padding: 2rem;
@@ -543,15 +572,13 @@ label {
 
 .service1, .service2, .service3 {
     margin-bottom: 1rem;
+    color: var(--secundario);
+    text-shadow: 1px 1px black;
 }
 
 .p1, .p2, .p3 {
     text-align: justify;
     text-justify: inter-word;
-}
-
-.contenedor {
-    padding-bottom: 0.2rem;
 }
 
 footer {
@@ -565,6 +592,10 @@ footer {
     font-style: italic;
     font-size: large;
     padding: 0.5%;
+}
+
+.boton2:hover {
+    cursor: pointer;
 }
 
 /****************************************************************************************************/
